helm/charts/grimmory/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grimmory
  labels:
    app: grimmory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grimmory
  template:
    metadata:
      labels:
        app: grimmory
    spec:
      containers:
        - name: grimmory
          image: grimmory/grimmory:latest
          ports:
            - containerPort: 6060
          volumeMounts:
            - mountPath: /app/data
              name: grimmory-data
            - mountPath: /books
              name: grimmory-books
              subPath: data
            - mountPath: /bookdrop
              name: grimmory-bookdrop
              subPath: data
      volumes:
        - name: grimmory-data
          persistentVolumeClaim:
            claimName: grimmory-data
        - name: grimmory-books
          persistentVolumeClaim:
            claimName: grimmory-books
        - name: grimmory-bookdrop
          persistentVolumeClaim:
            claimName: grimmory-bookdrop
