helm/charts/grimmory/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grimmory-database
spec:
  selector:
    matchLabels:
      app: grimmory-database
  serviceName: "grimmory-database"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: grimmory-database
    spec:
      terminationGracePeriodSeconds: 20
      containers:
        - name: mariadb
          image: lscr.io/linuxserver/mariadb:11.4.5
          ports:
            - containerPort: 3306
              name: db
          volumeMounts:
            - name: config
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
