helm/charts/grimmory/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grimmory
spec:
  rules:
    - host: books.koudijs.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grimmory
                port:
                  number: 6060
  tls:
    - secretName: books-koudijs-lan
      hosts:
        - books.koudijs.lan
